# agent-rag-research

./: .gitignore  .graphifyignore  AGENTS.md  ARCHITECTURE.md  CLAUDE.md  CONTEXT.md  CONVENTIONS.md  DATA-CONTRACTS.md  EXECUTION-READINESS-REVIEW.md  GIT-WORKFLOW.md  LESSONS-LEARNED.md  PHASE0-RUNBOOK.md  PRD.md  README.md  SCHEDULE.md  TEST-STRATEGY.md  Technical Design & Annotated Survey An Advanced RAG System for Applied-Science Academic Literature (Causal Inference, EconML, Causal ML, LLM Applications).md  WORK-BREAKDOWN.md  config.yaml  conftest.py  environment.yml  phase0-results.md  pyproject.toml  rag_v0_design_review.md  research-kb-system-scope.md
.github/: CODEOWNERS
.github/workflows/: ci.yml  nightly-real-adapters.yml
app/: adaptive_batch_sizer.py  assembly.py  benchmark.py  build_corpus.py  corpus_integrity.py  doctor.py  gpu_headroom.py  ingest.py  mcp_verify_client.py  obsidian_export.py  parse_phase.py  prefetch_pdfs.py  reembed_experiment.py  reindex_idf.py  retrieval_eval.py  run_prefetch_loop.sh  serve.py  snapshot.py  tei_lifecycle.py  telemetry.py  test_adaptive_batch_sizer.py  test_assembly.py  test_benchmark.py  test_build_corpus.py  test_corpus_integrity.py  test_doctor.py  test_gpu_headroom.py  test_ingest.py  test_mcp_verify_client.py  test_obsidian_export.py  test_parse_phase.py  test_prefetch_pdfs.py  test_reembed_experiment.py  test_reindex_idf.py  test_retrieval_eval.py  test_serve.py  test_snapshot.py  test_tei_lifecycle.py  test_telemetry.py
app/dashboard/: __init__.py  controller.py  server.py  status.py  test_controller.py  test_server.py  test_status.py
app/dashboard/static/: index.html
ci/: __init__.py  run_enforcement.py
ci/checks/: __init__.py  blind_except.py  changed_files.py  contract_shadowing.py  diff.py  env_leak.py  foundation_label.py  gpu_lock.py  id_slicing.py  model.py  sibling_tests.py  test_checks.py  test_diff.py  vendor_isolation.py
ci/checks/negative_examples/: blind_except_bad.py  blind_except_good.py  contract_shadowing_bad.py  contract_shadowing_good.py  env_leak_bad.py  env_leak_good.py  gpu_lock_bad.py  gpu_lock_good.py  id_slicing_bad.py  id_slicing_good.py  id_slicing_new_adhoc_bad.py  id_slicing_removesuffix_bad.py  vendor_isolation_bad.py  vendor_isolation_good.py
ci/checks/negative_examples/sibling_tests_bad/: lonely_module.py
ci/proof_socket_block/: test_real_network_blocked.py
contracts/: __init__.py  _base.py  chunker.py  config.py  conftest.py  document_store.py  embedder.py  errors.py  fusion.py  gpu_lock.py  harvester.py  ingest_state.py  mcp_server.py  parser.py  provenance.py  retriever.py  test_chunker.py  test_config.py  test_document_store.py  test_embedder.py  test_errors.py  test_fusion.py  test_gpu_lock.py  test_harvester.py  test_ingest_state.py  test_mcp_server.py  test_parser.py  test_provenance.py  test_retriever.py  test_vector_index.py  vector_index.py
docs/: DESIGN-claim-layer-v1.md  DESIGN-continuous-cache-first-build.md  GRAPHIFY.md  ROADMAP-AND-PRIORITIES-PLAIN-ENGLISH.md  THE-DECISION-plain-english.md  YOUR-USE-CASES-can-the-system-do-this.md
fixtures/eval/: eval_equation_slice.json  eval_equation_slice_topic_absent.json  eval_ground_truth.json  eval_questions_blind.json  test_eval_equation_slice_invariants.py  test_eval_fixture_invariants.py
fixtures/golden/: manifest.json
fixtures/golden/2409.01266/: mineru_content_list.json
fixtures/golden/2409.02332/: mineru_content_list.json
fixtures/golden/2410.00903/: mineru_content_list.json
fixtures/golden/2504.08836/: mineru_content_list.json
fixtures/golden/2506.14329/: mineru_content_list.json
fixtures/golden/2601.12120/: mineru_content_list.json
fixtures/golden/2602.15916/: mineru_content_list.json
fixtures/golden/2604.23107/: mineru_content_list.json
fixtures/golden/2605.05993/: mineru_content_list.json
fixtures/golden/2605.07029/: mineru_content_list.json
fixtures/golden/synthetic_scan_2605.07029/: mineru_content_list.json
fixtures/harvester/: paper_refs.json
migrations/: 0001_init.sql  0002_ingest_checkpoint.sql  0003_quarantine_diagnostics.sql  migrate.py  test_migrate.py
owners/: OWNER-A.md  OWNER-B.md  OWNER-C.md  OWNER-D.md  OWNER-E.md  OWNER-F.md
rag/: __init__.py  chunker.py  config.py  contextual_header.py  document_store.py  embedder.py  gpu_lock.py  harvester.py  ingest_state_sqlite.py  mcp_server.py  orchestrator.py  parser.py  reranker.py  retriever.py  summarizer.py  test_chunker.py  test_composition_e2e.py  test_config.py  test_contextual_header.py  test_document_store.py  test_embedder.py  test_gpu_lock.py  test_harvester.py  test_harvester_arxiv_source.py  test_ingest_state_sqlite.py  test_mcp_server.py  test_orchestrator.py  test_orchestrator_pipelining.py  test_parser.py  test_reranker.py  test_retriever.py  test_summarizer.py  test_vector_index.py  vector_index.py
rag/fakes/: __init__.py  fake_embedder.py  fake_gpu_lock.py  fake_ingest_state.py  fake_reranker.py  fake_source.py  fake_summarizer.py  fake_vector_store.py  test_fake_embedder.py  test_fake_gpu_lock.py  test_fake_ingest_state.py  test_fake_reranker.py  test_fake_source.py  test_fake_summarizer.py  test_fake_vector_store.py
