[project]
name = "agent-rag-research"
version = "0.0.0"
description = "Personal AI Research Knowledge System — V0 grounded RAG cache over causal-methods arXiv papers"
requires-python = "==3.12.*"
readme = "README.md"

# Dependencies are managed via environment.yml (conda), not here — see that file's header for why
# (GPU-linked binaries + a documented core-vs-Phase-0-deferred split). This file exists for package
# metadata and tool config only.

[tool.pytest.ini_options]
# "ci/checks" (T-F6) is this ticket's own self-test suite (ci/checks/test_checks.py), collected
# like any other suite. Deliberately excludes "ci/proof_socket_block" — that suite proves a real
# network call gets blocked, so it must never run inside this default, already-socket-disabled
# collection (see that file's own docstring); the enforcement job invokes it explicitly instead.
# "fixtures/eval" is the imported 210-question Spike-2 eval set's own mechanical invariants suite
# (test_eval_fixture_invariants.py) — collected here so CODEOWNERS-protected fixture drift fails CI,
# not just a sibling project's own test run.
testpaths = ["rag", "contracts", "ci/checks", "fixtures/eval"]
python_files = ["test_*.py"]
# T-F6(i) (WORK-BREAKDOWN.md / CONVENTIONS.md §12): non-adapter suites run with sockets disabled.
# Real-adapter contract tests opt out of --disable-socket explicitly at the point they're invoked
# (nightly/on-demand CI job, not this default config) — see .github/workflows/ci.yml.
addopts = "--disable-socket -q"

[tool.ruff]
target-version = "py312"
line-length = 100
# ci/checks/negative_examples/ is deliberately-broken reference material (T-F6's Done criterion —
# each of CONVENTIONS §12(a)-(h) needs a committed fixture proven to fail its check) — not a
# lint target. Excluding it here keeps `ruff check .` clean without watering down what it means
# for the rest of the tree to be clean.
#
# This path string also appears in ci/run_enforcement.py's _EXCLUDED_PREFIXES (keeps it out of the
# real enforcement scan) and ci/checks/test_checks.py's FIXTURES (points the self-tests at it) --
# if this path ever moves, update all three.
extend-exclude = ["ci/checks/negative_examples"]

[tool.ruff.lint]
# T-F6 extends this with the project's own mechanical checks. "BLE" (flake8-blind-except, bundled
# with ruff) is check (c)'s primary mechanism (CONVENTIONS §4/§12) alongside "E"'s E722
# (bare-except) — see ci/checks/blind_except.py's docstring for why both are needed (E722 alone
# misses `except Exception:`, and BLE001 alone misses bare `except:`).
select = ["E", "F", "I", "BLE"]
